feat: documtos listos de la cafeteria

--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Document</title>
+    <title>Cafeteria Bom Bom</title>
 </head>
 <body>
-    
+    <div class="container">
+        <nav class="nav">
+            <h1>Cafeteria Bom Bom</h1>
+        </nav>
+        <aside class="filters">
+            <h2>Filtros</h2>
+            <input type="checkbox" id="toggle-menu">
+            <label for="toggle-menu" class="hamburger">&#9776;</label>
+            <ul class="menu">
+                <li>Latte</li>
+                <li>Cappuccino</li>
+                <li>Chai</li>
+                <li>Chocolate</li>
+            </ul>
+        </aside>
+        <main class="products">
+          <div class="product">Latte</div>
+          <div class="product"> Cappuccino</div>
+          <div class="product">Chai</div>
+          <div class="product">Chocolate</div>
+        </main>
+        <div class="pagination">
+            <a href=""> < </a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+             <a href="">></a>
+        </div>
+        <footer class="footer">
+            <p>© 2020 Cafeteria Bom Bom</p>
+        </footer>
+    </div>
 </body>
 </html>
